# face-spoof-creater

./: .gitignore  CMakeLists.txt  README.md  align_spoof.cc  capture_spoof.cc  create_spoof.cc  main.cc  make_spoof.cc  make_spoof.h
internal_thread/: CMakeLists.txt  capture_thread.cc  capture_thread.h  decode_thread.cc  decode_thread.h  display_thread.cc  display_thread.h  dumping_thread.cc  dumping_thread.h  encode_thread.cc  encode_thread.h  internal_data.h  loading_thread.cc  loading_thread.h
tools/: spoof_align.cc  spoof_align.h  spoof_aligner.cc  spoof_aligner.h  spoof_capture.cc  spoof_capture.h  spoof_creater.cc  spoof_creater.h
unit/: CMakeLists.txt  display_capture_unit.cc  display_capture_unit.h  encode_dumping_unit.cc  encode_dumping_unit.h  loading_decode_unit.cc  loading_decode_unit.h
utils/: CMakeLists.txt  background.cc  background.h  bounded_blocking_queue.h  corner_detector.cc  corner_detector.h  io.cc  io.h  logging.cc  logging.h  mouse_input.cc  mouse_input.h  text_recognizer.cc  text_recognizer.h  thread.cc  thread.h
